classDiagram
    direction TB
    class Entity {
        #repository : Repository
        -errors : array
        #post_type : string|false
        #capability_type : string|false
        +WP_Post : WP_Post
        -validated : bool
        +cap : object
        +__construct(which)
        +get_repository()
        +get_date_i18n(date)
        +get_mapped_property(prop)
        #set_mapped_property(prop, value)
        +set(prop, value)
        +get(prop)
        +set_status(value)
        +validate()
        +validate_prop(prop)
        +get_errors()
        +$get_post_type()
        +$get_capability_type()
        +get_status()
        +get_db_identifier()
        +get_id()
        +add_error(type, message)
        +reset_errors()
        +get_validated()
        #set_validated(value)
        #set_as_valid()
        +_toArray()
        +_toJson()
        +can_read(user)
        +can_edit(user)
        +can_delete(user)
        +can_publish(user)
        +get_capabilities()
        +diff(which)
    }
    class Taxonomy {
        #name : mixed
        +post_type : string
        #capability_type : string
        #repository : string
        +db_identifier_prefix : string
        +__toString()
        +tainacan_register_taxonomy()
        +get_capabilities()
        +get_name()
        +get_description()
        +get_allow_insert()
        +get_hierarchical()
        +get_slug()
        +get_enabled_post_types()
        +get_db_identifier()
        +set_name(value)
        +set_slug(value)
        +set_description(value)
        +set_allow_insert(value)
        +set_hierarchical(value)
        +set_enabled_post_types(value)
        +validate()
        +term_exists(term_name, parent, return_term)
    }
    Entity ..> Entity
    Entity <|-- Taxonomy
